<?xml version="1.0" encoding="utf-8"?><!--
  ~             DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
  ~                     Version 2, December 2004
  ~
  ~  Copyright (C) 2015 Lukas "dotwee" Wolfsteiner <lukas@wolfsteiner.de>
  ~
  ~  Everyone is permitted to copy and distribute verbatim or modified
  ~  copies of this license document, and changing it is allowed as long
  ~  as the name is changed.
  ~
  ~             DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
  ~    TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
  ~
  ~   0. You just DO WHAT THE FUCK YOU WANT TO.
  ~
  -->

<resources>

    <string name="app_name">OpenKWSolver</string>

    <string name="title_activity_text">OpenKWSolver</string>
    <string name="title_activity_preferences">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="action_close">Close</string>
    <string name="action_ok">Ok</string>

    <string name="main_button_text_start">Start</string>
    <string name="main_button_text_send">Send</string>
    <string name="main_button_text_skip">Skip</string>
    <string name="main_edittext_hint_answer">Answer</string>

    <string name="main_textview_text_balance">Balance:</string>
    <string name="main_textview_text_captcha">Captcha ID:</string>

    <string name="main_toast_emptyanswer">Empty answer. Please skip the Captcha instead of sending a empty answer</string>

    <string name="pref_api_key_title">API-Key</string>
    <string name="pref_api_key_description">Your 9kw API-Key</string>
    <string name="pref_api_selfonly_title">Self-only Captchas</string>
    <string name="pref_api_selfonly_description">Enable solving only own Captchas</string>
    <string name="pref_api_debug_title">Debug-Mode</string>
    <string name="pref_api_debug_description">Enable Debug-mode, only for testing the connection!</string>

    <string name="pref_notification_title">Notification Alert</string>
    <string name="pref_notification_description">Show a notification on arrivement of new Captcha</string>
    <string name="pref_notification_vibrate_title">Vibration Alert</string>
    <string name="pref_notification_vibrate_description">Vibrate on arrivements</string>
    <string name="pref_notification_sound_title">Sound Alert</string>
    <string name="pref_notification_sound_description">Play notification sound on arrivements</string>

    <string name="pref_automation_loop_title">Loop-Mode</string>
    <string name="pref_automation_loop_description">Auto-pull next Captcha after skipping or sending</string>
    <string name="pref_automation_loop_time_title">Loop-Timeout</string>
    <string name="pref_automation_loop_time_description">Seconds until pulling the next Captcha</string>
    <string name="pref_automation_balance_title">Auto updating balance</string>
    <string name="pref_automation_balance_description">Update the balance automatically every 5 seconds</string>

    <string name="pref_layout_captcha_size_title">Captcha-Image Size</string>
    <string name="pref_layout_captcha_id_title">Display current CaptchaID</string>

    <string name="pref_about_github_title">Source Code</string>
    <string name="pref_about_issue_title">Report Issue</string>
    <string name="pref_about_mail_title">Mail the developer</string>
</resources>
