<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Notification Settings">

        <CheckBoxPreference
            android:contentDescription="@string/pref_notification_description"
            android:key="pref_notification"
            android:title="@string/pref_notification_title"/>

        <CheckBoxPreference
            android:contentDescription="@string/pref_notification_vibrate_description"
            android:key="pref_notification_vibrate"
            android:title="@string/pref_notification_vibrate_title"/>

        <CheckBoxPreference
            android:contentDescription="@string/pref_notification_sound_description"
            android:key="pref_notification_sound"
            android:title="@string/pref_notification_sound_title"/>

    </PreferenceCategory>

</PreferenceScreen>
