<?xml version="1.0" encoding="utf-8"?><!--
  ~             DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
  ~                     Version 2, December 2004
  ~
  ~  Copyright (C) 2015 Lukas "dotwee" Wolfsteiner <lukas@wolfsteiner.de>
  ~
  ~  Everyone is permitted to copy and distribute verbatim or modified
  ~  copies of this license document, and changing it is allowed as long
  ~  as the name is changed.
  ~
  ~             DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
  ~    TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
  ~
  ~   0. You just DO WHAT THE FUCK YOU WANT TO.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Automation Settings">
        <SwitchPreference
            android:contentDescription="@string/pref_automation_loop_description"
            android:defaultValue="true"
            android:key="pref_automation_loop"
            android:title="@string/pref_automation_loop_title" />

        <ListPreference
            android:contentDescription="@string/pref_automation_loop_time_description"
            android:defaultValue="0"
            android:entries="@array/array_loop_time"
            android:entryValues="@array/array_loop_time_value"
            android:key="pref_automation_loop_time"
            android:title="@string/pref_automation_loop_time_title"/>

        <SwitchPreference
            android:contentDescription="@string/pref_automation_balance_description"
            android:defaultValue="false"
            android:key="pref_automation_balance"
            android:title="@string/pref_automation_balance_title" />

    </PreferenceCategory>

</PreferenceScreen>