<?xml version="1.0" encoding="utf-8"?>
<!--
  ~             DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
  ~                     Version 2, December 2004
  ~
  ~  Copyright (C) 2015 Lukas "dotwee" Wolfsteiner <lukas@wolfsteiner.de>
  ~
  ~  Everyone is permitted to copy and distribute verbatim or modified
  ~  copies of this license document, and changing it is allowed as long
  ~  as the name is changed.
  ~
  ~             DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
  ~    TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
  ~
  ~   0. You just DO WHAT THE FUCK YOU WANT TO.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="About">

        <Preference
            android:key="pref_about_github"
            android:title="@string/pref_about_github_title"/>

        <Preference
            android:key="pref_about_issue"
            android:title="@string/pref_about_issue_title"/>

        <Preference
            android:key="pref_about_mail"
            android:title="@string/pref_about_mail_title"/>
    </PreferenceCategory>

</PreferenceScreen>